--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "angular5-csv": "^0.2.11",
     "ngx-doc-viewer": "^1.4.0",
     "ngx-toastr": "^13.1.0",
     "rxjs": "~6.6.0",
